--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Blog</title>
-</head>
-<body>
+{% extends 'blog/base.html' %}
+{% block main_area%}    
     <h1>Blog</h1>
     {% for p in post_list %}
     <hr>
@@ -12,5 +7,4 @@
     <h4>{{p.created_at}}</h4>
     <p>{{p.content}}</p>
     {% endfor %}
-</body>
-</html>
+{% endblock %}
