updates (comment error, search)

--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,3 +1,4 @@
+
 {% extends 'blog/base.html' %}
 {% load crispy_forms_tags %}
 
@@ -43,6 +44,7 @@
 
 
         <hr>
+
         <!-- Post Content -->
         <p>{{ post.get_content_markdown | safe }}</p>
 
@@ -117,6 +119,8 @@
                                     delete
                                 </a>
                             </div>
+
+                            <!-- Modal -->
                             <div class="modal fade" id="deleteCommentModal-{{ comment.pk }}" tabindex="-1" role="dialog" aria-labelledby="deleteCommentModalLabel" aria-hidden="true">
                                 <div class="modal-dialog" role="document">
                                     <div class="modal-content">
