--- a/homepage/templates/homepage/about_me.html
+++ b/homepage/templates/homepage/about_me.html
@@ -25,7 +25,7 @@
 </head>
 <body>
     {% include 'blog/navbar.html' %}
-    
+
     <section class="margin-for-footer">
         <div class="container mt-t">
             <div class="row">
@@ -40,6 +40,9 @@
                         <li>인사이트 발굴 및 활용방안 제안</li>
                         <li>모니터링 및 지속 개선</li>
                     </ul>
+                </div>
+                <div class="col-lg-4 mt-5">
+                    <img class="image-fluid" width="600" src="{% static 'homepage/images/캐리커쳐.GIF' %}">
                 </div>
 
             </div>
