--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -31,7 +31,7 @@
 </head>
 <body>
     {% include 'blog/navbar.html' %}
-    <div class="container my-3">
+    <div class="container pt-5 my-5">
         <div class="row">
             <div class="col-md-8 col-lg-9" id="main-area">
                 {% block main_area %}
@@ -73,6 +73,23 @@
                 </div>
             </div>
         </div>
+        <script>
+            function searchPost() {
+                let searchValue = document.getElementById('search-input').value.trim();
+                if (searchValue.length > 1) {
+                    location.href = "/blog/search/" + searchValue + "/";
+                }
+                else {
+                    alert('검색어(' + searchValue + ')가 너무 짧습니다.');
+                }
+            };
+
+            document.getElementById('search-input').addEventListener('keyup', function (event) {
+                if (event.key === 'Enter') {
+                    searchPost();
+                }
+            });
+        </script>
     </div>
     <div class="fixed-bottom">
     {% include 'blog/footer.html' %}
